--- a/proj.css
+++ b/proj.css
@@ -19,7 +19,18 @@ body {
   text-align: center;
   font-size: 20px;
 }
-
+.btn1 {
+  color: white;
+  border-radius: 3rem;
+  text-align: center;
+  font-size: 25px;
+  margin: 30px;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 15px 25px;
+  background-color: rgba(139, 120, 127, 0.9);
+  margin-top: 10rem;
+}
 .btn {
   border: none;
   text-align: center;
@@ -48,9 +59,22 @@ body {
 .intro {
   font-size: 18px;
 }
+.grow {
+  flex-grow: 1;
+}
 .image {
   justify-content: space-between;
 }
 .pl-sm {
   padding-left: 50px;
+}
+.tit {
+  font-size: 50px;
+  text-align: center;
+  font-weight: 900;
+  padding-left: 4rem;
+}
+.t1 {
+  font-size: 35px;
+  font-weight: 600;
 }
