--- a/proj.css
+++ b/proj.css
@@ -29,7 +29,10 @@ body {
   text-decoration: none;
   padding: 15px 25px;
   background-color: rgba(139, 120, 127, 0.9);
-  margin-top: 10rem;
+}
+.btn1:hover {
+  color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(32, 24, 27, 0.9);
 }
 .btn {
   border: none;
@@ -57,7 +60,7 @@ body {
   flex-direction: column;
 }
 .intro {
-  font-size: 18px;
+  font-size: 20px;
 }
 .grow {
   flex-grow: 1;
@@ -77,4 +80,9 @@ body {
 .t1 {
   font-size: 35px;
   font-weight: 600;
+}
+li {
+  padding-left: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
